vwa gap fix

--- a/components/vehicle-we-armor/Banner.module.scss
+++ b/components/vehicle-we-armor/Banner.module.scss
@@ -4,7 +4,7 @@
   @include breakpoint(small) {
     display: flex;
     flex-flow: column;
-    min-height: 80vh;
+    // min-height: 80vh;
   }
   @include breakpoint(large) {
     max-width: 2200px;
@@ -108,6 +108,7 @@
     display: flex;
     flex-flow: column;
     justify-content: center;
+    row-gap: 10px;
 
     & > a:nth-child(2) {
       margin-top: 8px;
